# fastapi_blog

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose-local.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/blog/: models.py  routers.py  schemas.py  services.py
app/user/: __init__.py  models.py  routers.py  schemas.py  security.py  services.py
apps/post/: depends.py  models.py  routers.py  schemas.py  service.py
apps/post/repository/: base.py  sqlalchemy.py
apps/user/: __init__.py  depends.py  models.py  routers.py  schemas.py  security.py  service.py
apps/user/repository/: base.py  sqlalchemy.py
db/: base.py  session.py
docker/: celery.sh
migrations/: env.py
migrations/versions/: 1225f7f94940_create_table_for_posts.py  ceff2538e13a_added_column_to_users_for_checking_email.py  f031fee53f89_create_table_for_users.py
tasks/: tasks.py
tests/: conftest.py
tests/test_post/: test_create_post.py  test_delete_post.py  test_get_post.py  test_update_post.py
tests/test_user/: test_create_user.py  test_delete_user.py  test_get_user.py  test_privilege_management.py  test_update_user.py
